--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,6 +15,6 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build the Docker image
-      run: 
+      run: |
         docker login ghcr.io -u MANH-mei --password ${{ secrets.GH_PAT }}
         docker build . --file Dockerfile --tag ghcr.io/presentation-web-app/slidey-be:latest
