--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,3 +18,5 @@ jobs:
       run: |
         docker login ghcr.io -u MANH-mei --password ${{ secrets.GH_PAT }}
         docker build . --file Dockerfile --tag ghcr.io/presentation-web-app/slidey-be:latest
+        docker push ghcr.io/presentation-web-app/slidey-be:latest
+
