add prefix '/api' for all APIs and change port to 5000

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,4 @@ APP_HOMEPAGE=https://slidey.onrender.com
 APP_LOGO=https://placehold.co/400x400.png
 GOOGLE_CLIENT_Id=5292669152-rvcgmvfhuvsei0c41v8c7smujjpf8j6m.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
+PORT=5000
