--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -3,5 +3,6 @@
     "semi": true,
     "singleQuote": false,
     "trailingComma": "es5",
-    "endOfLine": "lf"
+    "endOfLine": "lf",
+    "printWidth": 120
 }
