--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
-DB_URI=postgres://admin:G557rz82bhf5ohX34q6AKG6IqgoJr5sl@dpg-ck9e7o1ehpqs73cjkang-a.singapore-postgres.render.com/presentation_app
-DB_HOST=dpg-ck9e7o1ehpqs73cjkang-a.singapore-postgres.render.com
+DB_URI=postgres://admin:FhNNGXjavq08lKj3AmNwo5hkihLiJDvw@dpg-cm4pohvqd2ns73elhq1g-a.singapore-postgres.render.com/presentation_app_bory
+DB_HOST=dpg-cm4pohvqd2ns73elhq1g-a.singapore-postgres.render.com
 DB_PORT=5432
 DB_USER=admin
-DB_PASSWORD=G557rz82bhf5ohX34q6AKG6IqgoJr5sl
-DB_DATABASE=presentation_app
+DB_PASSWORD=FhNNGXjavq08lKj3AmNwo5hkihLiJDvw
+DB_DATABASE=presentation_app_bory
 APP_EMAIL=slidey.tdtu@gmail.com
 APP_EMAIL_PASSWORD=drjedyyxnjbrzldm
 APP_NAME=SLIDEY
