--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "handlebars": "^4.7.8",
         "http-errors": "^2.0.0",
         "jsonwebtoken": "^9.0.2",
+        "lodash": "4.17.21",
         "mongoose": "^7.5.0",
         "nodemailer": "^6.9.5",
         "passport": "^0.6.0",
@@ -37,7 +38,7 @@
         "rimraf": "^5.0.1",
         "sequelize": "^6.33.0",
         "sequelize-auto": "^0.8.8",
-        "lodash": "4.17.21"
+        "socket.io": "^4.7.3"
     },
     "devDependencies": {
         "@babel/cli": "^7.19.3",
