--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,7 @@ APP_EMAIL=slidey.tdtu@gmail.com
 APP_EMAIL_PASSWORD=drjedyyxnjbrzldm
 APP_NAME=SLIDEY
 APP_HOMEPAGE=https://slidey.onrender.com
-APP_LOGO=https://placehold.co/400x400.png
+APP_LOGO=https://slidey.onrender.com/logo512.png
 GOOGLE_CLIENT_Id=5292669152-rvcgmvfhuvsei0c41v8c7smujjpf8j6m.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
 PORT=5000
