--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "jsonwebtoken": "^9.0.2",
         "lodash": "4.17.21",
         "mongoose": "^7.5.0",
+        "multer": "^1.4.5-lts.1",
         "nodemailer": "^6.9.5",
         "passport": "^0.6.0",
         "passport-jwt": "^4.0.1",
