env for file upload

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,7 @@ APP_LOGO=https://slidey.onrender.com/logo512.png
 GOOGLE_CLIENT_Id=5292669152-rvcgmvfhuvsei0c41v8c7smujjpf8j6m.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
 PORT=5000
+NODE_ENV=development
+CLOUD_NAME=dv3yfon8g
+CLOUD_API_KEY=719368711479392
+CLOUD_API_SECRET=fm-Mzb2BfgSCK_4ncZXaNRXu9vg
