--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
-DB_URI=postgres://admin:FhNNGXjavq08lKj3AmNwo5hkihLiJDvw@dpg-cm4pohvqd2ns73elhq1g-a.singapore-postgres.render.com/presentation_app_bory
-DB_HOST=dpg-cm4pohvqd2ns73elhq1g-a.singapore-postgres.render.com
+DB_URI=postgres://admin:dU5vjFQ2fxMx43wDAWks90VZLYBtcxjp@dpg-cns4f98cmk4c73bnb0mg-a.singapore-postgres.render.com/slidey_database
+DB_HOST=dpg-cns4f98cmk4c73bnb0mg-a.singapore-postgres.render.com
 DB_PORT=5432
 DB_USER=admin
-DB_PASSWORD=FhNNGXjavq08lKj3AmNwo5hkihLiJDvw
-DB_DATABASE=presentation_app_bory
+DB_PASSWORD=dU5vjFQ2fxMx43wDAWks90VZLYBtcxjp
+DB_DATABASE=slidey_database
 APP_EMAIL=slidey.tdtu@gmail.com
 APP_EMAIL_PASSWORD=drjedyyxnjbrzldm
 APP_NAME=SLIDEY
